@@ -4,6 +4,7 @@
 1.0.3
   * Fixed a bug in the inspectTarball.py script that caused it to crash on TBN/TBW metadata
   * Added fallbacks to lsl.misc.geodesy to use a backup EOP server if the primary is unreachable
+  * Fixed a bug in imageIDI.py that caused it to crash if a FITS image is not saved
 
 1.0.2
   * Added documentation for LDP to the Sphinx build system
